[Build][WIN32][OSD] Adjust linkage parameter.

--- a/source/src/qt/CMakeLists.txt
+++ b/source/src/qt/CMakeLists.txt
@@ -40,9 +40,10 @@ include (GenerateExportHeader)
   )
 
 target_link_libraries(CSPosd PUBLIC
-          ${CMAKE_SOURCE_DIR}/../../build-cmake/bin-win32/libCSPemu_utils.dll.a
+          PRIVATE  ${CMAKE_SOURCE_DIR}/../../build-cmake/bin-win32/libCSPemu_utils.dll.a
 #          ${CMAKE_SOURCE_DIR}/../../build-cmake/bin-win32/libCSPgui.dll.a
 #          ${CMAKE_SOURCE_DIR}/../../build-cmake/bin-win32/libqt_avio.a
+          PUBLIC
 	  Qt5::Core
 	  Qt5::Gui
 	  Qt5::OpenGL
