[VM][FMTOWNS] Some devices are enabled to compile. [BUILD][CMAKE][FMTOWNS] Add skelton. [UI][Qt][FMTOWNS] Add *DUMMY* UI.Resources also still be dummy.

--- a/source/src/vm/fmtowns/CMakeLists.txt
+++ b/source/src/vm/fmtowns/CMakeLists.txt
@@ -14,8 +14,8 @@ add_library(vm_fmtowns
 	timer.cpp
 
 	serialrom.cpp
-	sysrom.cpp
-	dictionary.cpp
+	towns_sysrom.cpp
+	towns_dictionary.cpp
 	msdosrom.cpp
 	
 	fontroms.cpp
