--- a/source/src/vm/common_vm/CMakeLists.txt
+++ b/source/src/vm/common_vm/CMakeLists.txt
@@ -1,6 +1,6 @@
 message("* vm/common_vm")
 
-SET(THIS_LIB_VERSION 2.10.2)
+SET(THIS_LIB_VERSION 2.11.0)
 
 #include(cotire)
 set(s_vm_common_vm_srcs
@@ -78,7 +78,7 @@ set(s_vm_common_vm_srcs
 	../upd1990a.cpp
 	../upd4991a.cpp
 	../upd71071.cpp
-	../upd7220_base.cpp
+	../upd7220.cpp
 	../upd765a.cpp
 	../upd7752.cpp
 	../upd7801.cpp
