--- a/source/src/vm/pc9801/CMakeLists.txt
+++ b/source/src/vm/pc9801/CMakeLists.txt
@@ -20,21 +20,23 @@ elseif(BUILD_PC9801E)
   add_library(vm_pc9801  ${BASIC_VM_FILES} cmt.cpp )
 elseif(BUILD_PC9801U) 
   add_library(vm_pc9801  ${BASIC_VM_FILES} cmt.cpp )
-elseif(BUILD_PC9801RA) 
-  add_library(vm_pc9801  ${BASIC_VM_FILES} cpureg.cpp  sasi.cpp sasi_bios.cpp)
 elseif(BUILD_PC9801VF) 
   add_library(vm_pc9801  ${BASIC_VM_FILES} )
 elseif(BUILD_PC9801VM) 
   add_library(vm_pc9801  ${BASIC_VM_FILES} )
 #  add_library(vm_pc9801  ${BASIC_VM_FILES})
-elseif(BUILD_PC9801VX) 
-  add_library(vm_pc9801  ${BASIC_VM_FILES} cpureg.cpp sasi.cpp sasi_bios.cpp)
-elseif(BUILD_PC98RL) 
-  add_library(vm_pc9801  ${BASIC_VM_FILES} cpureg.cpp sasi.cpp sasi_bios.cpp)
-elseif(BUILD_PC98XL) 
-  add_library(vm_pc9801  ${BASIC_VM_FILES} cpureg.cpp  sasi.cpp sasi_bios.cpp)
 elseif(BUILD_PC98DO)
     add_library(vm_pc9801  ${BASIC_VM_FILES})
+elseif(BUILD_PC9801VX) 
+  add_library(vm_pc9801  ${BASIC_VM_FILES} cpureg.cpp sasi.cpp sasi_bios.cpp egc.cpp)
+elseif(BUILD_PC98XL) 
+  add_library(vm_pc9801  ${BASIC_VM_FILES} cpureg.cpp  sasi.cpp sasi_bios.cpp egc.cpp)
+elseif(BUILD_PC9801RA) 
+  add_library(vm_pc9801  ${BASIC_VM_FILES} cpureg.cpp  sasi.cpp sasi_bios.cpp egc.cpp)
+elseif(BUILD_PC98RL) 
+  add_library(vm_pc9801  ${BASIC_VM_FILES} cpureg.cpp sasi.cpp sasi_bios.cpp egc.cpp)
+elseif(BUILD_PC98XA) 
+  add_library(vm_pc9801  ${BASIC_VM_FILES} cpureg.cpp sasi.cpp sasi_bios.cpp)
 elseif(BUILD_PC98DOP) 
-  add_library(vm_pc9801  ${BASIC_VM_FILES} sasi.cpp sasi_bios.cpp)
+  add_library(vm_pc9801  ${BASIC_VM_FILES} sasi.cpp sasi_bios.cpp egc.cpp)
 endif()
