--- a/source/build-cmake/fmr30_i286/CMakeLists.txt
+++ b/source/build-cmake/fmr30_i286/CMakeLists.txt
@@ -48,17 +48,17 @@ set(BUILD_FMR30_86 OFF CACHE BOOL "Build for FM-R30, i86 version")
 set(BUILD_FMR30_286 ON CACHE BOOL "Build for FM-R30, i286 version")
 if(BUILD_FMR30_86)
   set(EXEC_TARGET emufmr30_i86)
-  set(FLAG_USE_I86 OFF)
-  set(VMFILES ${VMFILES}
-	i286.cpp
-  )
+#  set(FLAG_USE_I86 OFF)
+#  set(VMFILES ${VMFILES}
+#	i286.cpp
+# )
   add_definitions(-DHAS_I86)
 elseif(BUILD_FMR30_286)
   set(EXEC_TARGET emufmr30_i286)
-  set(FLAG_USE_I86 OFF)
-  set(VMFILES ${VMFILES}
-	i286.cpp
-  )
+#  set(FLAG_USE_I86 OFF)
+#  set(VMFILES ${VMFILES}
+#	i286.cpp
+#  )
   add_definitions(-DHAS_I286)
 endif()
 
