--- a/source/build-cmake/m5/CMakeLists.txt
+++ b/source/build-cmake/m5/CMakeLists.txt
@@ -23,7 +23,7 @@ set(WITH_MOUSE ON)
 
 set(FLAG_USE_Z80 ON)
 set(VMFILES_BASE
-      memory.cpp
+#      memory.cpp
   
       io.cpp
       event.cpp
