--- a/source/build-cmake/x07/CMakeLists.txt
+++ b/source/build-cmake/x07/CMakeLists.txt
@@ -23,7 +23,7 @@ set(FLAG_USE_Z80 ON)
 set(VMFILES_BASE
 		   
 		   event.cpp
-		   memory.cpp
+#		   memory.cpp
 )
 set(VMFILES_LIB
 		   beep.cpp
