--- a/source/build-cmake/pcengine/CMakeLists.txt
+++ b/source/build-cmake/pcengine/CMakeLists.txt
@@ -26,11 +26,11 @@ set(VMFILES_BASE
 		   scsi_cdrom.cpp
 		   
 		   event.cpp
-		   io.cpp
-#		   memory.cpp
 )
 set(VMFILES_LIB
 		   huc6280_base.cpp
+		   io.cpp
+		   memory.cpp
 		   msm5205.cpp
 #		   scsi_cdrom.cpp
 #		   scsi_dev_base.cpp
