--- a/source/build-cmake/pv2000/CMakeLists.txt
+++ b/source/build-cmake/pv2000/CMakeLists.txt
@@ -20,11 +20,11 @@ set(WITH_MOUSE OFF)
 
 set(FLAG_USE_Z80 ON)
 set(VMFILES
-		   io.cpp
-#		   memory.cpp
 		   event.cpp
 )
 set(VMFILES_LIB
+		   io.cpp
+		   memory.cpp
 		   sn76489an.cpp
 		   tms9918a.cpp
 )		   
