[VM][FMTOWNS] Start to try building.Maybe imcomplete a lot.

--- a/source/src/vm/fmtowns/CMakeLists.txt
+++ b/source/src/vm/fmtowns/CMakeLists.txt
@@ -2,26 +2,37 @@ cmake_minimum_required (VERSION 2.6)
 
 message("* vm/fm-towns")
 
-add_library(vm_fmtowns
-
+set(VM_FMTOWNS_DEV_SRCS
 	ad7820kr.cpp
 	rf5c68.cpp
 	
 	adpcm.cpp
+	cdc.cpp
 	floppy.cpp
 	keyboard.cpp
 	scsi.cpp
 	timer.cpp
-
-	serialrom.cpp
-	towns_sysrom.cpp
-	towns_dictionary.cpp
-	msdosrom.cpp
+	towns_dmac.cpp
 	
 	fontroms.cpp
+	msdosrom.cpp
+	serialrom.cpp
+	townd_dictionary.cpp
 	
+	towns_cdrom.cpp
 	towns_crtc.cpp
 	towns_memory.cpp
 	towns_sprite.cpp
+	towns_sysrom.cpp
 	towns_vram.cpp
+
+	fmtowns.cpp
 )
+
+if(BUILD_WITH_20PIX)
+  set(VM_FMTOWNS_DEV_SRCS ${VM_FMTOWNS_DEV_SRCS} fontrom_20pix.cpp)
+endif()
+
+add_library(vm_fmtowns
+	${VM_FMTOWNS_DEV_SRCS}
+)	
