[VM] Merge UPstream 2020-02-01.

--- a/source/src/vm/common_vm/CMakeLists.txt
+++ b/source/src/vm/common_vm/CMakeLists.txt
@@ -1,6 +1,6 @@
 message("* vm/common_vm")
 
-SET(THIS_LIB_VERSION 2.21.0)
+SET(THIS_LIB_VERSION 2.22.1)
 
 #include(cotire)
 set(s_vm_common_vm_srcs
@@ -19,7 +19,7 @@ set(s_vm_common_vm_srcs
 	../hd63484.cpp
 	../huc6280_base.cpp
 	../i286.cpp
-	../i386.cpp
+#	../i386.cpp
 	../i8080_base.cpp
 
 	../i8155.cpp
@@ -110,6 +110,47 @@ set(s_vm_common_vm_srcs
 	../fm7/mb61vh010.cpp
 #	../fm7/dummydevice.cpp
 
+	../i386_np21.cpp
+	../np21/i386c/cpucore.cpp
+	../np21/i386c/cpumem.cpp		   
+    ../np21/i386c/ia32/cpu.cpp
+    ../np21/i386c/ia32/cpu_io.cpp
+    ../np21/i386c/ia32/cpu_mem.cpp
+    ../np21/i386c/ia32/ctrlxfer.cpp
+    ../np21/i386c/ia32/debug.cpp
+    ../np21/i386c/ia32/exception.cpp
+    ../np21/i386c/ia32/groups.cpp
+    ../np21/i386c/ia32/ia32.cpp
+    ../np21/i386c/ia32/inst_table.cpp
+    ../np21/i386c/ia32/interface.cpp
+    ../np21/i386c/ia32/paging.cpp
+    ../np21/i386c/ia32/resolve.cpp
+    ../np21/i386c/ia32/segments.cpp
+    ../np21/i386c/ia32/task.cpp
+    ../np21/i386c/ia32/instructions/bin_arith.cpp
+    ../np21/i386c/ia32/instructions/bit_byte.cpp
+    ../np21/i386c/ia32/instructions/ctrl_trans.cpp
+    ../np21/i386c/ia32/instructions/data_trans.cpp
+    ../np21/i386c/ia32/instructions/dec_arith.cpp
+    ../np21/i386c/ia32/instructions/flag_ctrl.cpp
+    ../np21/i386c/ia32/instructions/fpu.cpp
+    ../np21/i386c/ia32/instructions/logic_arith.cpp
+    ../np21/i386c/ia32/instructions/misc_inst.cpp
+    ../np21/i386c/ia32/instructions/seg_reg.cpp
+    ../np21/i386c/ia32/instructions/shift_rotate.cpp
+    ../np21/i386c/ia32/instructions/string_inst.cpp
+    ../np21/i386c/ia32/instructions/system_inst.cpp
+    ../np21/i386c/ia32/instructions/fpu/fpdummy.cpp
+    ../np21/i386c/ia32/instructions/fpu/fpemul_dosbox.cpp
+    ../np21/i386c/ia32/instructions/fpu/fpemul_dosbox2.cpp
+    ../np21/i386c/ia32/instructions/fpu/fpemul_softfloat.cpp
+    ../np21/i386c/ia32/instructions/fpu/softfloat/softfloat.cpp
+		   
+		   ../np21/i386c/ia32/instructions/mmx/3dnow.cpp
+		   ../np21/i386c/ia32/instructions/mmx/mmx.cpp
+		   ../np21/i386c/ia32/instructions/sse/sse.cpp
+		   ../np21/i386c/ia32/instructions/sse2/sse2.cpp
+		   ../np21/i386c/ia32/instructions/sse3/sse3.cpp
 	../libcpu_newdev/device.cpp
 )
 
