[VM][FMTOWNS][FMGEN] Fix LACKing DLLEXPORT attribute to OPN2:: class. [VM][FMTOWNS] Fix FTBFS with LLVM CLANG. [BUILD][CMAKE][Windows][LLVM] Update Qt version to 5.14.

--- a/source/src/vm/common_vm/CMakeLists.txt
+++ b/source/src/vm/common_vm/CMakeLists.txt
@@ -1,6 +1,6 @@
 message("* vm/common_vm")
 
-SET(THIS_LIB_VERSION 2.23.0)
+SET(THIS_LIB_VERSION 2.23.1)
 
 #include(cotire)
 set(s_vm_common_vm_srcs
@@ -109,6 +109,7 @@ set(s_vm_common_vm_srcs
 	../fm7/hd6844.cpp
 	../fm7/mb61vh010.cpp
 #	../fm7/dummydevice.cpp
+#	../fmtowns/ym2612.cpp
 
 	../i386_np21.cpp
 	../np21/i386c/cpucore.cpp
