[VM][PC9801][DISPLAY] Re-Backport from Upstream 2020-02-01.Kakinoki Syougi works fine.
Thanks to https://matsuri.5ch.net/test/read.cgi/i4004/1526806551/719 .

--- a/source/src/vm/common_vm/CMakeLists.txt
+++ b/source/src/vm/common_vm/CMakeLists.txt
@@ -84,7 +84,7 @@ set(s_vm_common_vm_srcs
 	../upd1990a.cpp
 	../upd4991a.cpp
 	../upd71071.cpp
-	../upd7220.cpp
+#	../upd7220.cpp
 	../upd765a.cpp
 	../upd7752.cpp
 	../upd7801.cpp
