[Build][PC9801][CMAKE] .

--- a/source/src/vm/pc9801/CMakeLists.txt
+++ b/source/src/vm/pc9801/CMakeLists.txt
@@ -13,7 +13,7 @@ set(BASIC_VM_FILES
 	   keyboard.cpp
 	   dmareg.cpp
 	   membus.cpp
-	   ../upd7220.cpp
+#	   ../upd7220.cpp
 	   )
 	   
 if(BUILD_PC9801) 
