[VM][JX][MZ2800] Fix FTBFS with I8088.
[VM][MZ6550] Fix FTBFS.

--- a/source/src/vm/jx/CMakeLists.txt
+++ b/source/src/vm/jx/CMakeLists.txt
@@ -8,7 +8,7 @@ set(BASIC_VM_FILES
 	   floppy.cpp
 	   keyboard.cpp
 	   speaker.cpp
-	   
+	   ./i86.cpp
 	   )
 
 add_library(vm_jx  ${BASIC_VM_FILES})
