[VM][FMTOWNS] Add IC CARD feature.

--- a/source/src/vm/fmtowns/CMakeLists.txt
+++ b/source/src/vm/fmtowns/CMakeLists.txt
@@ -16,8 +16,8 @@ set(VM_FMTOWNS_DEV_SRCS
 	towns_dmac.cpp
 	
 	fontroms.cpp
+	iccard.cpp
 	joystick.cpp
-
 	msdosrom.cpp
 	serialrom.cpp
 	towns_dictionary.cpp
