[VM][FMTOWNS][JOYSTICK][JOYPAD] Add 6button pad emulation (OK?).Separate JOYPAD to a class.

--- a/source/src/vm/fmtowns/CMakeLists.txt
+++ b/source/src/vm/fmtowns/CMakeLists.txt
@@ -18,6 +18,7 @@ set(VM_FMTOWNS_DEV_SRCS
 	fontroms.cpp
 	iccard.cpp
 	joystick.cpp
+	joypad.cpp
 	msdosrom.cpp
 	serialrom.cpp
 	towns_dictionary.cpp
