--- a/source/src/qt/debugger/CMakeLists.txt
+++ b/source/src/qt/debugger/CMakeLists.txt
@@ -10,7 +10,7 @@ else()
   QT4_WRAP_CPP(s_qt_debugger_headers_MOC ${s_qt_debugger_headers})
 endif()
  
-add_library(qt_debugger
+add_library(qt_debugger_${EXE_NAME}
 		  qt_debugger.cpp
 		  ${s_qt_debugger_headers_MOC}
 )
