[BUILD][CMAKE] Add X1 series and PC-8001/8801 series and Single board computers.

--- a/source/src/qt/machines/pc9801/CMakeLists.txt
+++ b/source/src/qt/machines/pc9801/CMakeLists.txt
@@ -3,14 +3,12 @@ message("* qt/pc9801")
 set(s_qt_pc9801_headers
 	  menuclasses.h
 )
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_pc9801_headers_MOC ${s_qt_pc9801_headers})
-else()
-  QT4_WRAP_CPP(s_qt_pc9801_headers_MOC ${s_qt_pc9801_headers})
-endif()
-add_library(qt_pc9801
+
+QT5_WRAP_CPP(s_qt_${EXE_NAME}_headers_MOC ${s_qt_pc9801_headers})
+
+add_library(qt_${EXE_NAME}
 	  MainWindow.cpp
-	  ${s_qt_pc9801_headers_MOC}
+	  ${s_qt_${EXE_NAME}_headers_MOC}
 )
 
 
