--- a/source/src/qt/machines/pyuta/CMakeLists.txt
+++ b/source/src/qt/machines/pyuta/CMakeLists.txt
@@ -3,14 +3,12 @@ message("* qt/pyuta")
 set(s_qt_pyuta_headers
 	  menuclasses.h
 )
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_pyuta_headers_MOC ${s_qt_pyuta_headers})
-else()
-  QT4_WRAP_CPP(s_qt_pyuta_headers_MOC ${s_qt_pyuta_headers})
-endif()
-add_library(qt_pyuta
+
+QT5_WRAP_CPP(s_qt_emupyuta_headers_MOC ${s_qt_pyuta_headers})
+
+add_library(qt_emupyuta
 	  MainWindow.cpp
-	  ${s_qt_pyuta_headers_MOC}
+	  ${s_qt_emupyuta_headers_MOC}
 )
 
 
