--- a/source/src/qt/machines/scv/CMakeLists.txt
+++ b/source/src/qt/machines/scv/CMakeLists.txt
@@ -3,14 +3,12 @@ message("* qt/scv")
 set(s_qt_scv_headers
 	  menuclasses.h
 )
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_scv_headers_MOC ${s_qt_scv_headers})
-else()
-  QT4_WRAP_CPP(s_qt_scv_headers_MOC ${s_qt_scv_headers})
-endif()
-add_library(qt_scv
+
+QT5_WRAP_CPP(s_qt_emuscv_headers_MOC ${s_qt_scv_headers})
+
+add_library(qt_emuscv
 	  MainWindow.cpp
-	  ${s_qt_scv_headers_MOC}
+	  ${s_qt_emuscv_headers_MOC}
 )
 
 
