--- a/source/src/vm/pc8801/CMakeLists.txt
+++ b/source/src/vm/pc8801/CMakeLists.txt
@@ -1,15 +1,28 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/pc8801")
+message("* vm/${EXE_NAME}")
 
-if(BUILD_PC98DO)
-add_library(vm_pc8801
-	pc88.cpp
-#	pc8801.cpp
-)
-else()
-add_library(vm_pc8801
-	pc88.cpp
-	pc8801.cpp
-)
+if(${EXE_NAME} STREQUAL emupc8801ma)
+	add_library(vm_emupc8801ma
+		../scsi_host.cpp
+		pc88.cpp
+		pc8801.cpp
+	)
+else()	
+	add_library(vm_${EXE_NAME}
+		pc88.cpp
+		pc8801.cpp
+	)
 endif()
+
+#if(BUILD_PC98DO)
+#add_library(vm_pc8801
+#	pc88.cpp
+##	pc8801.cpp
+#)
+#else()
+#add_library(vm_pc8801
+#	pc88.cpp
+#	pc8801.cpp
+#)
+#endif()
