--- a/source/src/vm/tk80bs/CMakeLists.txt
+++ b/source/src/vm/tk80bs/CMakeLists.txt
@@ -1,18 +1,21 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/tk80bs")
+message("* vm/${EXE_NAME}")
 
 set(VMFILES_TK
 	display.cpp
 	keyboard.cpp
 
 	membus.cpp
-#	memory.cpp
 )
-if(BUILD_TK80BS)
-   set(VMFILES_TK ${VMFILES_TK} cmt.cpp)
+if(${EXE_NAME} STREQUAL emutk80bs)
+	add_library(vm_emutk80bs
+		${VMFILES_TK} cmt.cpp
+		tk80bs.cpp
+	)
+else()
+	add_library(vm_${EXE_NAME}
+		${VMFILES_TK}
+		tk80bs.cpp
+	)
 endif()
-add_library(vm_tk80bs
-	${VMFILES_TK}
-	tk80bs.cpp
-)
