--- a/source/src/vm/x1/CMakeLists.txt
+++ b/source/src/vm/x1/CMakeLists.txt
@@ -1,20 +1,45 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/x1")
+message("* vm/${EXE_NAME}")
 
-add_library(vm_x1
-	display.cpp
-	emm.cpp
-	floppy.cpp
-#	io.cpp
-	iobus.cpp
-	joystick.cpp
-	keyboard.cpp
-	memory.cpp
-	mouse.cpp
-	psub.cpp
-	sasi.cpp
-	sub.cpp
-	
-	x1.cpp
-)
+if(${EXE_NAME} STREQUAL emux1twin)
+	add_library(vm_${EXE_NAME}
+		display.cpp
+		emm.cpp
+		floppy.cpp
+		iobus.cpp
+		joystick.cpp
+		keyboard.cpp
+		memory.cpp
+		mouse.cpp
+		psub.cpp
+		sasi.cpp
+		sub.cpp
+		
+		../mcs48.cpp
+		../mz1p17.cpp
+		../scsi_host.cpp
+		
+		../pcengine/pce.cpp
+		../huc6280.cpp
+		x1.cpp
+	)
+else()
+	add_library(vm_${EXE_NAME}
+		display.cpp
+		emm.cpp
+		floppy.cpp
+		iobus.cpp
+		joystick.cpp
+		keyboard.cpp
+		memory.cpp
+		mouse.cpp
+		psub.cpp
+		sasi.cpp
+		sub.cpp
+		../mcs48.cpp
+		../mz1p17.cpp
+		../scsi_host.cpp
+		x1.cpp
+	)
+endif()
