--- a/source/src/vm/yalky/CMakeLists.txt
+++ b/source/src/vm/yalky/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required (VERSION 2.6)
 
 message("* vm/yalky")
 
-add_library(vm_yalky
+add_library(vm_emuyalky
 	io.cpp
 	yalky.cpp
 )
