--- a/source/src/qt/machines/babbage2nd/CMakeLists.txt
+++ b/source/src/qt/machines/babbage2nd/CMakeLists.txt
@@ -4,14 +4,9 @@ set(s_qt_b2nd_headers
 	  menuclasses.h
 )
 
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_b2nd_headers_MOC ${s_qt_b2nd_headers})
-#  QT5_ADD_RESOURCES(s_qt_fm7_headers_RCC ${RESOURCE})
-else()
-  QT4_WRAP_CPP(s_qt_b2nd_headers_MOC ${s_qt_b2nd_headers})
-endif()
+QT5_WRAP_CPP(s_qt_b2nd_headers_MOC ${s_qt_b2nd_headers})
 
-add_library(qt_babbage2nd
+add_library(qt_emubabbage2nd
 	  MainWindow.cpp
 	  ${s_qt_b2nd_headers_MOC}
 )
