--- a/source/src/qt/machines/pc8801/CMakeLists.txt
+++ b/source/src/qt/machines/pc8801/CMakeLists.txt
@@ -1,17 +1,13 @@
-message("* qt/pc8801ma")
+message("* qt/${EXE_NAME}")
 
 set(s_qt_pc8801ma_headers
 	  menuclasses.h
 )
 
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_pc8801ma_headers_MOC ${s_qt_pc8801ma_headers})
-else()
-  QT4_WRAP_CPP(s_qt_pc8801ma_headers_MOC ${s_qt_pc8801ma_headers})
-endif()
-add_library(qt_pc8801
+QT5_WRAP_CPP(s_qt_${EXE_NAME}_headers_MOC ${s_qt_pc8801ma_headers})
+add_library(qt_${EXE_NAME}
 	  MainWindow.cpp
-	  ${s_qt_pc8801ma_headers_MOC}
+	  ${s_qt_${EXE_NAME}_headers_MOC}
 )
 
 
