--- a/source/src/qt/machines/pcengine/CMakeLists.txt
+++ b/source/src/qt/machines/pcengine/CMakeLists.txt
@@ -3,14 +3,12 @@ message("* qt/pcengine")
 set(s_qt_pce_headers
 	  menuclasses.h
 )
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_pce_headers_MOC ${s_qt_pce_headers})
-else()
-  QT4_WRAP_CPP(s_qt_pce_headers_MOC ${s_qt_pce_headers})
-endif()
-add_library(qt_pcengine
+
+QT5_WRAP_CPP(s_qt_emupcengine_headers_MOC ${s_qt_pce_headers})
+
+add_library(qt_emupcengine
 	  MainWindow.cpp
-	  ${s_qt_pce_headers_MOC}
+	  ${s_qt_emupcengine_headers_MOC}
 )
 
 
