--- a/source/src/qt/machines/x1/CMakeLists.txt
+++ b/source/src/qt/machines/x1/CMakeLists.txt
@@ -1,16 +1,16 @@
-message("* qt/x1turboz")
+message("* qt/${EXE_NAME}")
 
 set(s_qt_x1turboz_headers
 	  menuclasses.h
 )
 if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_x1turboz_headers_MOC ${s_qt_x1turboz_headers})
+  QT5_WRAP_CPP(s_qt_${EXE_NAME}_headers_MOC ${s_qt_x1turboz_headers})
 else()
-  QT4_WRAP_CPP(s_qt_x1turboz_headers_MOC ${s_qt_x1turboz_headers})
+  QT4_WRAP_CPP(s_qt_${EXE_NAME}_headers_MOC ${s_qt_x1turboz_headers})
 endif()
-add_library(qt_x1
+add_library(qt_${EXE_NAME}
 	  MainWindow.cpp
-	  ${s_qt_x1turboz_headers_MOC}
+	  ${s_qt_${EXE_NAME}_headers_MOC}
 )
 
 
