--- a/source/src/qt/machines/ys6464a/CMakeLists.txt
+++ b/source/src/qt/machines/ys6464a/CMakeLists.txt
@@ -4,14 +4,9 @@ set(s_qt_ys6464a_headers
 	  menuclasses.h
 )
 
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_ys6464a_headers_MOC ${s_qt_ys6464a_headers})
-#  QT5_ADD_RESOURCES(s_qt_fm7_headers_RCC ${RESOURCE})
-else()
-  QT4_WRAP_CPP(s_qt_ys6464a_headers_MOC ${s_qt_ys6464a_headers})
-endif()
+QT5_WRAP_CPP(s_qt_ys6464a_headers_MOC ${s_qt_ys6464a_headers})
 
-add_library(qt_ys6464a
+add_library(qt_emuys6464a
 	  MainWindow.cpp
 	  ${s_qt_ys6464a_headers_MOC}
 )
