--- a/source/src/qt/machines/z80tvgame/CMakeLists.txt
+++ b/source/src/qt/machines/z80tvgame/CMakeLists.txt
@@ -1,19 +1,14 @@
-message("* qt/z80tvgame")
+message("* qt/${EXE_NAME}")
 
 set(s_qt_z80tvgame_headers
 	  menuclasses.h
 )
 
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_z80tvgame_headers_MOC ${s_qt_z80tvgame_headers})
-#  QT5_ADD_RESOURCES(s_qt_fm7_headers_RCC ${RESOURCE})
-else()
-  QT4_WRAP_CPP(s_qt_z80tvgame_headers_MOC ${s_qt_z80tvgame_headers})
-endif()
+QT5_WRAP_CPP(s_qt_${EXE_NAME}_headers_MOC ${s_qt_z80tvgame_headers})
 
-add_library(qt_z80tvgame
+add_library(qt_${EXE_NAME}
 	  MainWindow.cpp
-	  ${s_qt_z80tvgame_headers_MOC}
+	  ${s_qt_${EXE_NAME}_headers_MOC}
 )
 
 
