--- a/source/src/vm/babbage2nd/CMakeLists.txt
+++ b/source/src/vm/babbage2nd/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required (VERSION 2.6)
 
 message("* vm/babbage2nd")
 
-add_library(vm_babbage2nd
+add_library(vm_emubabbage2nd
 	display.cpp
 	keyboard.cpp
 	babbage2nd.cpp
