--- a/source/src/vm/cefucom21/CMakeLists.txt
+++ b/source/src/vm/cefucom21/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required (VERSION 2.6)
 
 message("* vm/cefucom21")
 
-add_library(vm_cefucom21
+add_library(vm_emucefucom21
 	cefucom21.cpp
 	
 	mcu.cpp
