--- a/source/src/vm/ex80/CMakeLists.txt
+++ b/source/src/vm/ex80/CMakeLists.txt
@@ -2,10 +2,10 @@ cmake_minimum_required (VERSION 2.6)
 
 message("* vm/ex80")
 
-add_library(vm_ex80
+add_library(vm_emuex80
 	cmt.cpp
 	display.cpp
-	ex80.cpp
 	keyboard.cpp
-	memory.cpp
+	./memory.cpp
+	ex80.cpp
 )
