--- a/source/src/vm/smb80te/CMakeLists.txt
+++ b/source/src/vm/smb80te/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required (VERSION 2.6)
 
 message("* vm/smb80te")
 
-add_library(vm_smb80te
+add_library(vm_emusmb80te
 	smb80te.cpp
 	memory.cpp
 )
