--- a/source/src/vm/yis/CMakeLists.txt
+++ b/source/src/vm/yis/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required (VERSION 2.6)
 
 message("* vm/yis")
 
-add_library(vm_yis
+add_library(vm_emuyis
 	calendar.cpp
 	display.cpp
 	floppy.cpp
