[BUILD][CMAKE] Add pc-6001 series.

--- a/source/src/vm/ex80/CMakeLists.txt
+++ b/source/src/vm/ex80/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required (VERSION 2.6)
 message("* vm/ex80")
 
 add_library(vm_emuex80
+	../i8080.cpp
+	
 	cmt.cpp
 	display.cpp
 	keyboard.cpp
