[BUILD][CMAKE] Fix FTBFSs.Add RESOURCE per VM.Add emutk80.

--- a/source/src/qt/machines/fm7/CMakeLists.txt
+++ b/source/src/qt/machines/fm7/CMakeLists.txt
@@ -1,14 +1,14 @@
 message("* qt/${EXE_NAME}")
 
-set(s_qt_fm7_headers
+set(s_qt_fm7_headers_${EXE_NAME}
 	  menuclasses.h
 )
 
- QT5_WRAP_CPP(s_qt_fm7_headers_${EXE_NAME}_MOC ${s_qt_fm7_headers})
+QT5_WRAP_CPP(s_qt_fm7_headers_${EXE_NAME}_MOC ${s_qt_fm7_headers_${EXE_NAME}})
 
 add_library(qt_${EXE_NAME}
-	  MainWindow.cpp
-	  ${s_qt_fm7_headers_${EXE_NAME}_MOC}
+	MainWindow.cpp
+	${s_qt_fm7_headers_${EXE_NAME}_MOC}
 )
 
 
