--- a/source/src/qt/machines/bmjr/CMakeLists.txt
+++ b/source/src/qt/machines/bmjr/CMakeLists.txt
@@ -4,15 +4,11 @@ set(s_qt_bmjr_headers
 	  menuclasses.h
 )
 
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_bmjr_headers_MOC ${s_qt_bmjr_headers})
-else()
-  QT4_WRAP_CPP(s_qt_bmjr_headers_MOC ${s_qt_bmjr_headers})
-endif()
+QT5_WRAP_CPP(s_qt_bmjr_headers_MOC ${s_qt_bmjr_headers})
 
-add_library(qt_bmjr
-	  MainWindow.cpp
-	  ${s_qt_bmjr_headers_MOC}
+add_library(qt_emubmjr
+	MainWindow.cpp
+	${s_qt_bmjr_headers_MOC}
 )
 
 
